<resources>
    <string name="app_name">Gravity</string>


    <string name="dots">. . .</string>
    <string name="todo">TODO</string>
    <string name="or">or</string>
    <string name="how_many_questions_do_you_want_to_solve">How many questions do you want to solve?</string>
    <string name="question">Question</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="e">e</string>
    <string name="c">c</string>
    <string name="d">d</string>
    <string name="your_result">Your result</string>
    <string name="_100_100">100/100</string>
    <string name="home">home</string>
    <string name="select_file">Select file</string>

    <color name="blue">#99BFBF</color>
    <color name="black">#000000</color>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_results">My results</string>
    <string name="next">Next</string>
    <string name="enter_your_questions_here">Enter your questions here</string>
    <string name="back">Back</string>
    <string name="pdf">PDF</string>
</resources>