<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".TestActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/question"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="350dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/todo"

                app:srcCompat="@android:drawable/ic_menu_rotate" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question"
                android:layout_marginStart="35dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginEnd="35dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/a" />

                <RadioButton
                    android:id="@+id/radio_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b" />

                <RadioButton
                    android:id="@+id/radio_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c" />

                <RadioButton
                    android:id="@+id/radio_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d" />

                <RadioButton
                    android:id="@+id/radio_e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/e" />


            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/imgnext"
                android:layout_width="110dp"
                android:layout_height="45dp"
                android:layout_below="@+id/radio_group"
                android:layout_marginStart="270dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="150dp"
                android:text="@string/next"


                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/imageBtn2"
                android:layout_width="110dp"
                android:layout_height="45dp"
                android:layout_below="@+id/radio_group"
                android:layout_marginStart="35dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="150dp"
                android:text="@string/back"
                />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>