<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/your_result"
        android:textAlignment="center"
        android:ems="15"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text"
        android:layout_marginTop="150dp"
        android:text="@string/_100_100"
        android:textAlignment="center"
        android:ems="15"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:gravity="center_horizontal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/imgBtnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result"
        android:layout_marginTop="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:text="Home" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:srcCompat="@android:drawable/ic_menu_rotate"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/result"
        android:contentDescription="@string/todo"
        />


</RelativeLayout>